# microceph

./: .gitignore  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  HACKING.md  HERMES_TEST.md  README.md  SECURITY.md  dependabot.yml  go.mod  go.sum  readthedocs.yaml  snapcraft.yaml  tox.ini
.github/: .jira_sync_config.yaml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: ci_health_report.py
.github/workflows/: auto-doc-tag.yml  automatic-doc-checks.yml  candidate-upgrade.yml  checks.yml  ci-health-report.yml  commits.yml  (+20 more)
cli/: microceph.sh
daemon/: daemon.go  daemon_test.go
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wordlist.txt  Makefile  conf.py  custom_conf.py  index.rst  readme.rst  requirements.txt
metosd/: ceph_conf.go  ceph_conf_test.go  ceph_volume.go  metosd.go
microceph/: Makefile  go.mod  go.sum
microceph-orch/: pyproject.toml
microceph-orch/src/microceph/: __init__.py  module.py
microceph-orch/src/microceph/client/: client.py  cluster.py  service.py
microceph-orch/src/orchestrator/: module.py
microceph-orch/tests/: conftest.py  stubs.py  test_client.py  test_module.py
network/: ip.go  ip_test.go
patch/: ceph-volume-check-owner-before-chown.patch
patches/: 0001-enable-microceph-orchestrator.patch  0002-Adds-list-command-to-cephfs-mirroring.patch  0002-fix-prometheus-module-string-formatting-error.patch  0003-add-stub-smb-mgr-module.patch  0004-fix-dashboard-crypto-nameerror.patch
scripts/: appS3.py
snap/: snapcraft.yaml
tests/: Makefile  README.md  main.py  models.py  utils.py
(+685 files in other folders)
